--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=javaSwing
+application.vendor=Tranh
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,9 +33,10 @@ dist.jar=${dist.dir}/javaSwing.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/javaSwing
+endorsed.classpath=
 excludes=
 includes=**
-jar.compress=false
+jar.compress=true
 javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -69,9 +71,9 @@ javadoc.windowtitle=
 jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
-jlink.launcher=true
+jlink.launcher=false
 jlink.launcher.name=javaSwing
-main.class=javaswing.JavaSwing
+main.class=helloSwing.mainForm
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
